--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.html
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.html
@@ -1,9 +1,30 @@
 <div class="plagiarism-header">
     <div class="plagiarism-header-left">
-        <h4>Submission #4</h4>
+        <h4>Plagiarism #4</h4>
     </div>
     <div class="plagiarism-header-right">
-        <button class="btn">Foo</button>
-        <button class="btn">Bar</button>
+        <button class="btn btn-success" (click)="onConfirmPlagiarism()">Foo</button>
+        <button class="btn btn-danger" (click)="onDenyPlagiarism()">Bar</button>
+        <div class="vertical-divider"></div>
+        <div class="split-controls">
+            <div class="split-control">
+                <svg width="28" height="28" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4 5.5C4 4.67157 4.67157 4 5.5 4H15V20H5.5C4.67157 20 4 19.3284 4 18.5V5.5Z" fill="#E4E5E6" />
+                    <path d="M17 4H18.5C19.3284 4 20 4.67157 20 5.5V18.5C20 19.3284 19.3284 20 18.5 20H17V4Z" fill="#E4E5E6" />
+                </svg>
+            </div>
+            <div class="split-control">
+                <svg width="28" height="28" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4 5.5C4 4.67157 4.67157 4 5.5 4H11V20H5.5C4.67157 20 4 19.3284 4 18.5V5.5Z" fill="#E4E5E6" />
+                    <path d="M13 4H18.5C19.3284 4 20 4.67157 20 5.5V18.5C20 19.3284 19.3284 20 18.5 20H13V4Z" fill="#E4E5E6" />
+                </svg>
+            </div>
+            <div class="split-control">
+                <svg width="28" height="28" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M20 18.5C20 19.3284 19.3284 20 18.5 20L9 20L9 4L18.5 4C19.3284 4 20 4.67157 20 5.5L20 18.5Z" fill="#E4E5E6" />
+                    <path d="M7 20L5.5 20C4.67157 20 4 19.3284 4 18.5L4 5.5C4 4.67157 4.67157 4 5.5 4L7 4L7 20Z" fill="#E4E5E6" />
+                </svg>
+            </div>
+        </div>
     </div>
 </div>
