--- a/src/main/webapp/app/exercises/programming/participate/code-editor-student-container.component.html
+++ b/src/main/webapp/app/exercises/programming/participate/code-editor-student-container.component.html
@@ -48,11 +48,11 @@
         [exerciseHints]="exercise.exerciseHints"
         class="instructions-wrapper__content card-body p-0"
     ></jhi-programming-exercise-instructions>
-    <jhi-code-editor-tutor-assessment-display-code
+    <!--<jhi-code-editor-tutor-assessment-display-code
         *ngIf="hasTutorAssessment"
         editorCenter
         [selectedFile]="codeEditorContainer ? codeEditorContainer.selectedFile : undefined"
         [allFeedbacks]="this.latestResult!.feedbacks"
         [isStudent]="true"
-    ></jhi-code-editor-tutor-assessment-display-code>
+    ></jhi-code-editor-tutor-assessment-display-code> -->
 </jhi-code-editor-container>
