--- a/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
@@ -30,11 +30,10 @@
         (onError)="onError($event)"
         (onToggleCollapse)="onToggleCollapse($event)"
     ></jhi-code-editor-file-browser>
-    <div *ngIf="isTutorAssessment" editorCenter class="h-100">
+    <!--<div *ngIf="!isTutorAssessment" editorCenter class="h-100">
         <ng-content select="[editorCenter]"></ng-content>
-    </div>
+    </div> -->
     <jhi-code-editor-ace
-        *ngIf="!isTutorAssessment"
         editorCenter
         [selectedFile]="selectedFile"
         [sessionId]="participation ? participation.id : 'test'"
@@ -44,7 +43,8 @@
         [isTutorAssessment]="isTutorAssessment"
         (onFileContentChange)="onFileContentChange($event)"
         (onError)="onError($event)"
-    ></jhi-code-editor-ace>
+    >
+    </jhi-code-editor-ace>
     <jhi-code-editor-instructions *ngIf="showEditorInstructions" editorSidebarRight (onToggleCollapse)="onToggleCollapse($event)" (onError)="onError($event)">
         <ng-content select="[editorSidebar]"></ng-content>
     </jhi-code-editor-instructions>
