--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
@@ -92,6 +92,7 @@
                 [exercise]="exercise"
                 [canOverride]="canOverride"
                 [complaint]="complaint"
+                [isTestRun]="isTestRun"
                 (onResultModified)="onResultModified($event)"
             ></jhi-programming-assessment-manual-result-in-code-editor>
         </div>
