--- a/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
+++ b/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
@@ -259,29 +259,39 @@
                                 {{ 'artemisApp.tutorExerciseDashboard.languages.' + (submission.language ? submission.language : 'UNKNOWN') | translate }}
                             </td>
                             <td>
-                                <ng-container *ngIf="exercise.type !== ExerciseType.PROGRAMMING; else programmingAssessment">
-                                    <button
-                                        *ngIf="submission !== null && calculateStatus(submission) === 'DRAFT'; else continueButton"
-                                        (click)="openAssessmentEditor(submission)"
-                                        class="btn btn-warning btn-sm"
-                                    >
-                                        <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon>&nbsp;{{ 'artemisApp.tutorExerciseDashboard.continueAssessment' | translate }}
-                                    </button>
-                                    <ng-template #continueButton>
-                                        <button *ngIf="submission !== null && submission.result !== null" (click)="openAssessmentEditor(submission)" class="btn btn-primary btn-sm">
-                                            <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon>&nbsp;{{ 'artemisApp.tutorExerciseDashboard.openAssessment' | translate }}
+                                <ng-container *ngIf="(isTestRun && complaints.length === 0) || !isTestRun">
+                                    <ng-container *ngIf="exercise.type !== ExerciseType.PROGRAMMING; else programmingAssessment">
+                                        <button
+                                            *ngIf="submission !== null && calculateStatus(submission) === 'DRAFT'; else continueButton"
+                                            (click)="openAssessmentEditor(submission)"
+                                            class="btn btn-warning btn-sm"
+                                        >
+                                            <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon>&nbsp;{{
+                                                'artemisApp.tutorExerciseDashboard.continueAssessment' | translate
+                                            }}
                                         </button>
+                                        <ng-template #continueButton>
+                                            <button
+                                                *ngIf="submission !== null && submission.result !== null"
+                                                (click)="openAssessmentEditor(submission)"
+                                                class="btn btn-primary btn-sm"
+                                            >
+                                                <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon>&nbsp;{{
+                                                    'artemisApp.tutorExerciseDashboard.openAssessment' | translate
+                                                }}
+                                            </button>
+                                        </ng-template>
+                                    </ng-container>
+                                    <ng-template #programmingAssessment>
+                                        <jhi-programming-assessment-manual-result
+                                            [participationId]="submission.participation.id"
+                                            [latestResult]="submission.result"
+                                            [exercise]="exercise"
+                                            [isTestRun]="isTestRun"
+                                            (onResultModified)="loadAll()"
+                                        ></jhi-programming-assessment-manual-result>
                                     </ng-template>
                                 </ng-container>
-                                <ng-template #programmingAssessment>
-                                    <jhi-programming-assessment-manual-result
-                                        [participationId]="submission.participation.id"
-                                        [latestResult]="submission.result"
-                                        [exercise]="exercise"
-                                        [isTestRun]="isTestRun"
-                                        (onResultModified)="loadAll()"
-                                    ></jhi-programming-assessment-manual-result>
-                                </ng-template>
                             </td>
                         </tr>
                         <tr *ngIf="unassessedSubmission && unassessedSubmission?.id > 0 && !exercise.teamMode && !isTestRun">
