--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -10,26 +10,26 @@
     </div>
 </div>
 <jhi-alert></jhi-alert>
-<div class="mt-3 text-right" style="font-size: 0.85rem">Number of exercise groups: {{ exerciseGroups ? exerciseGroups.length : 0 }}</div>
-<div *ngFor="let exerciseGroup of exerciseGroups; let i = index" class="mt-3" style="border: 1px solid #cccccc">
-    <div class="d-flex p-3" style="background-color: #e1e1e1">
+<div class="mt-3 text-right" style="font-size: 0.85rem;">Number of exercise groups: {{ exerciseGroups ? exerciseGroups.length : 0 }}</div>
+<div *ngFor="let exerciseGroup of exerciseGroups; let i = index" class="mt-3" style="border: 1px solid #cccccc;">
+    <div class="d-flex p-3" style="background-color: #e1e1e1;">
         <div class="mr-3 d-flex justify-content-center">
             <button *ngIf="course?.isAtLeastInstructor" (click)="moveUp(i)" [disabled]="i == 0" class="border-0 p-0 mr-1 bg-transparent">
-                <fa-icon [icon]="'angle-up'" style="font-size: 1.3rem"></fa-icon>
+                <fa-icon [icon]="'angle-up'" style="font-size: 1.3rem;"></fa-icon>
             </button>
             <button *ngIf="course?.isAtLeastInstructor" (click)="moveDown(i)" [disabled]="i >= exerciseGroups!.length - 1" class="border-0 p-0 bg-transparent">
-                <fa-icon [icon]="'angle-down'" style="font-size: 1.3rem"></fa-icon>
+                <fa-icon [icon]="'angle-down'" style="font-size: 1.3rem;"></fa-icon>
             </button>
         </div>
         <div class="d-flex flex-column justify-content-center">
             <h5 class="font-weight-bold mb-0">{{ exerciseGroup.title }}</h5>
         </div>
         <div class="d-flex flex-column justify-content-center ml-3">
-            <span class="d-block rounded px-2 py-1" style="font-size: 0.85rem; background-color: #ffc107">
+            <span class="d-block rounded px-2 py-1" style="font-size: 0.85rem; background-color: #ffc107;">
                 {{ (exerciseGroup.isMandatory ? 'artemisApp.examManagement.exerciseGroup.mandatory' : 'artemisApp.examManagement.exerciseGroup.optional') | translate | lowercase }}
             </span>
         </div>
-        <div class="d-flex justify-content-end" style="flex: 1">
+        <div class="d-flex justify-content-end" style="flex: 1;">
             <div class="d-flex flex-column justify-content-center">
                 <div class="btn-group flex-btn-group-container">
                     <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
@@ -122,7 +122,7 @@
         </div>
     </div>
     <div class="p-3">
-        <div *ngIf="exerciseGroup.exercises" style="overflow-x: auto">
+        <div *ngIf="exerciseGroup.exercises" style="overflow-x: auto;">
             <table class="table table-striped">
                 <thead>
                     <tr>
@@ -175,7 +175,7 @@
                         <td class="align-middle">
                             {{ exercise.id }}
                         </td>
-                        <td class="align-middle" style="font-size: 1.35rem">
+                        <td class="align-middle" style="font-size: 1.35rem;">
                             <fa-icon [icon]="exerciseIcon(exercise)"></fa-icon>
                         </td>
                         <td class="align-middle">
