Update plagiarism sidebar

--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.html
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.html
@@ -1,10 +1,10 @@
 <div class="plagiarism-header">
     <div class="plagiarism-header-left">
-        <h4>Plagiarism #4</h4>
+        <h5>Plagiarism #4</h5>
     </div>
     <div class="plagiarism-header-right">
-        <button class="btn btn-success" (click)="onConfirmPlagiarism()">Foo</button>
-        <button class="btn btn-danger" (click)="onDenyPlagiarism()">Bar</button>
+        <button class="btn btn-success btn-sm" (click)="onConfirmPlagiarism()">Foo</button>
+        <button class="btn btn-danger btn-sm" (click)="onDenyPlagiarism()">Bar</button>
         <div class="vertical-divider"></div>
         <div class="split-controls">
             <div class="split-control" (click)="split.emit('left')">
