--- a/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-detail.component.html
+++ b/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-detail.component.html
@@ -38,7 +38,7 @@
             </button>
 
             <div ngbDropdown class="d-inline-block mr-1 ml-2">
-                <button class="btn btn-outline-primary" id="check-plagiarism-download" ngbDropdownToggle [disabled]="checkPlagiarismInProgress">
+                <button class="btn btn-outline-primary" id="check-plagiarism-download" [disabled]="checkPlagiarismInProgress" (click)="navigateToPlagiarismInspection()">
                     <span *ngIf="this.checkPlagiarismInProgress" class="mr-1"><fa-icon [icon]="'circle-notch'" spin="true"></fa-icon></span>
                     <span jhiTranslate="artemisApp.textExercise.checkPlagiarism">Check Plagiarism</span>
                 </button>
