Move checkPlagiarism() functionality to plagiarism inspector

--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.html
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.html
@@ -1,6 +1,6 @@
 <div class="plagiarism-header">
     <div class="plagiarism-header-left">
-        <h5>Plagiarism #4</h5>
+        <h5>Plagiarism #{{ comparisonIdx }}</h5>
     </div>
     <div class="plagiarism-header-right">
         <button class="btn btn-success btn-sm" (click)="onConfirmPlagiarism()">Foo</button>
