--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/plagiarism-split-view.component.html
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/plagiarism-split-view.component.html
@@ -1,4 +1,4 @@
 <div class="plagiarism-split-view">
-    <div jhiPane>Pane Left</div>
-    <div jhiPane>Pane Right</div>
+    <div jhiPane>{{ comparison?.element1?.studentLogin }}</div>
+    <div jhiPane>{{ comparison?.element2?.studentLogin }}</div>
 </div>
