--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-inspector/plagiarism-inspector.component.html
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-inspector/plagiarism-inspector.component.html
@@ -1,22 +1,46 @@
 <div class="plagiarism-inspector">
     <aside class="plagiarism-sidebar">
         <div class="plagiarism-sidebar-header">
-            {{ modelingExercise?.title || 'Test' }}
+            <button class="btn btn-link" (click)="goBack()">Back</button>
+            <h6>Plagiarism Inspection</h6>
         </div>
         <div class="plagiarism-sidebar-body">
-            <ul class="plagiarism-list">
-                <li class="plagiarism-list-item">Plagiarism #1</li>
-                <li class="plagiarism-list-item">Plagiarism #2</li>
+            <div class="plagiarism-empty" *ngIf="!modelingSubmissionComparisons || !modelingSubmissionComparisons.length">No plagiarism found</div>
+            <ul class="plagiarism-list" *ngIf="modelingSubmissionComparisons && modelingSubmissionComparisons.length">
+                <li
+                    class="plagiarism-list-item"
+                    [class.selected]="idx === selectedComparisonIndex"
+                    *ngFor="let comparison of modelingSubmissionComparisons; let idx = index"
+                    (click)="selectedComparisonIndex = idx"
+                >
+                    <span class="plagiarism-indicator"></span>
+                    <span>Plagiarism #{{ idx + 1 }}</span>
+                </li>
             </ul>
         </div>
         <div class="plagiarism-sidebar-footer">
-            <button class="btn btn-primary btn-block" (click)="checkPlagiarism()">
+            <div ngbDropdown class="mb-2" *ngIf="modelingSubmissionComparisons">
+                <button class="btn btn-secondary btn-block" id="download-plagiarism" ngbDropdownToggle>
+                    <span>Download</span>
+                </button>
+                <div ngbDropdownMenu aria-labelledby="download-plagiarism">
+                    <button type="button" (click)="checkPlagiarismJson()" ngbDropdownItem>JSON</button>
+                    <button type="button" (click)="checkPlagiarismCsv()" ngbDropdownItem>CSV</button>
+                </div>
+            </div>
+            <button class="btn btn-primary btn-block" (click)="checkPlagiarism()" [disabled]="checkPlagiarismInProgress">
                 <span jhiTranslate="artemisApp.textExercise.checkPlagiarism">Check Plagiarism</span>
             </button>
         </div>
     </aside>
-    <div class="plagiarism-main-window">
-        <jhi-plagiarism-header (split)="handleSplit($event)"></jhi-plagiarism-header>
-        <jhi-plagiarism-split-view [splitControl]="splitControlSubject.asObservable()"></jhi-plagiarism-split-view>
+    <div class="plagiarism-main">
+        <div class="plagiarism-empty" *ngIf="selectedComparisonIndex == undefined">No plagiarism selected</div>
+        <div *ngIf="selectedComparisonIndex != undefined">
+            <jhi-plagiarism-header [comparisonIdx]="selectedComparisonIndex + 1" (split)="handleSplit($event)"></jhi-plagiarism-header>
+            <jhi-plagiarism-split-view
+                [comparison]="modelingSubmissionComparisons ? modelingSubmissionComparisons[selectedComparisonIndex] : null"
+                [splitControl]="splitControlSubject.asObservable()"
+            ></jhi-plagiarism-split-view>
+        </div>
     </div>
 </div>
