--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-inspector/plagiarism-inspector.component.scss
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-inspector/plagiarism-inspector.component.scss
@@ -23,6 +23,15 @@ $footer-height: 31px;
             flex-shrink: 0;
             border-bottom: 1px solid $body-bg;
             padding: 0.75rem;
+
+            .btn-link {
+                border: none;
+                padding: 0;
+            }
+
+            h6 {
+                margin: 0;
+            }
         }
 
         &-body {
@@ -32,6 +41,31 @@ $footer-height: 31px;
                 padding: 0;
                 margin: 0;
                 list-style: none;
+                height: 100%;
+                overflow-y: auto;
+
+                &-item {
+                    display: flex;
+                    align-items: center;
+                    cursor: pointer;
+                    padding: 0.75rem;
+
+                    .plagiarism-indicator {
+                        border-radius: 50%;
+                        background-color: slategrey;
+                        height: 8px;
+                        width: 8px;
+                        margin-right: 0.75rem;
+                    }
+
+                    &:hover {
+                        background-color: lightskyblue;
+                    }
+
+                    &.selected {
+                        font-weight: bold;
+                    }
+                }
             }
         }
 
@@ -42,10 +76,18 @@ $footer-height: 31px;
         }
     }
 
-    .plagiarism-main-window {
+    .plagiarism-main {
         display: flex;
         flex-direction: column;
         height: 100%;
         margin-left: 200px;
+    }
+
+    .plagiarism-empty {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        opacity: 0.5;
     }
 }
