--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-inspector/plagiarism-inspector.component.html
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-inspector/plagiarism-inspector.component.html
@@ -35,7 +35,7 @@
     </aside>
     <div class="plagiarism-main">
         <div class="plagiarism-empty" *ngIf="selectedComparisonIndex == undefined">No plagiarism selected</div>
-        <div *ngIf="selectedComparisonIndex != undefined">
+        <div *ngIf="selectedComparisonIndex != undefined" class="plagiarism-content">
             <jhi-plagiarism-header [comparisonIdx]="selectedComparisonIndex + 1" (split)="handleSplit($event)"></jhi-plagiarism-header>
             <jhi-plagiarism-split-view
                 [comparison]="modelingSubmissionComparisons ? modelingSubmissionComparisons[selectedComparisonIndex] : null"
