Fix formatting error

--- a/src/main/webapp/app/course/dashboards/instructor-course-dashboard/instructor-course-dashboard.component.html
+++ b/src/main/webapp/app/course/dashboards/instructor-course-dashboard/instructor-course-dashboard.component.html
@@ -49,8 +49,8 @@
                             </li>
                             <li>
                                 <a [routerLink]="['/course-management', course.id, 'ratings']">
-                                    <b>{{ 'artemisApp.instructorCourseDashboard.rating' | translate }}</b></a
-                                >
+                                    <b>{{ 'artemisApp.instructorCourseDashboard.rating' | translate }}</b>
+                                </a>
                             </li>
                         </ul>
                     </div>
