--- a/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
@@ -40,6 +40,7 @@
         [annotations]="annotations"
         [commitState]="commitState"
         [editorState]="editorState"
+        [feedbacks]="participation.results[0].feedbacks"
         [isTutorAssessment]="isTutorAssessment"
         (onFileContentChange)="onFileContentChange($event)"
         (onError)="onError($event)"
