--- a/src/main/webapp/app/exercises/text/assess-new/text-submission-assessment.component.html
+++ b/src/main/webapp/app/exercises/text/assess-new/text-submission-assessment.component.html
@@ -31,8 +31,10 @@
                 [submission]="submission"
                 [(textBlockRefs)]="textBlockRefs"
                 [readOnly]="readOnly"
+                [conflictMode]="false"
                 (textBlockRefsChange)="validateFeedback()"
                 (textBlockRefsAddedRemoved)="recalculateTextBlockRefs()"
+                (onConflictsClicked)="navigateToConflictingSubmissions($event)"
             ></jhi-text-assessment-area>
             <!--endregion-->
 
