--- a/src/main/webapp/app/exercises/text/assess-new/text-assessment-area/text-assessment-area.component.html
+++ b/src/main/webapp/app/exercises/text/assess-new/text-assessment-area/text-assessment-area.component.html
@@ -4,9 +4,14 @@
         [textBlockRef]="ref"
         [selected]="selectedRef === ref"
         [readOnly]="readOnly"
-        (didSelect)="selectedRef = $event"
+        [isConflictingFeedback]="getIsConflictingFeedback(ref)"
+        [conflictType]="getConflictType(ref)"
+        [conflictMode]="conflictMode"
+        [isLeftConflictingFeedback]="isLeftConflictingFeedback"
+        (didSelect)="didSelectRef($event)"
         (didChange)="textBlockRefsChangeEmit()"
         (didDelete)="removeTextBlockRef($event)"
+        (onConflictsClicked)="onConflictsClicked.emit($event)"
     ></jhi-textblock-assessment-card>
 </ng-container>
 <ng-template #manualTextBlockSelection>
