fix sticky navbar

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -13,6 +13,7 @@
             <!-- exam nav -->
             <jhi-exam-navigation-bar
                 id="exam-navigation-bar"
+                class="sticky-top"
                 [exercises]="studentExam.exercises"
                 [exerciseIndex]="exerciseIndex"
                 [endDate]="individualStudentEndDate"
