--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.html
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.html
@@ -3,8 +3,8 @@
         <h5>Plagiarism #{{ comparisonIdx }}</h5>
     </div>
     <div class="plagiarism-header-right">
-        <button class="btn btn-success btn-sm" (click)="onConfirmPlagiarism()">Foo</button>
-        <button class="btn btn-danger btn-sm" (click)="onDenyPlagiarism()">Bar</button>
+        <button class="btn btn-success btn-sm" (click)="onTagPlagiarism(true)">{{ 'artemisApp.plagiarism.confirm' | translate }}</button>
+        <button class="btn btn-danger btn-sm" (click)="onTagPlagiarism(false)">{{ 'artemisApp.plagiarism.deny' | translate }}</button>
         <div class="vertical-divider"></div>
         <div class="split-controls">
             <div class="split-control" (click)="split.emit('left')">
