--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/plagiarism-split-view.component.scss
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/plagiarism-split-view.component.scss
@@ -1,3 +1,5 @@
+@import 'src/main/webapp/content/scss/artemis-variables';
+
 :host {
     height: 100%;
 }
@@ -6,4 +8,19 @@
     display: flex;
     flex-direction: row;
     height: 100%;
+
+    .plagiarism-split-pane {
+        position: relative;
+
+        &-header {
+            z-index: 1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: white;
+            border-bottom: 1px solid $body-bg;
+            padding: 2px 4px;
+        }
+    }
 }
