make event emitting work

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
@@ -36,6 +36,7 @@
         [participation]="participationForManualResult"
         [showEditorInstructions]="showEditorInstructions"
         [isTutorAssessment]="true"
+        (onUpdateFeedback)="onUpdateFeedback($event)"
     >
         <span editorTitle>{{ exercise.title }}</span>
         <div editorToolbar>
