--- a/src/main/webapp/app/exercises/programming/shared/code-editor/ace/code-editor-ace.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/ace/code-editor-ace.component.html
@@ -30,6 +30,7 @@
                 (onUpdateFeedback)="updateFeedback($event)"
                 (onDeleteFeedback)="deleteFeedback($event)"
                 (onCancelFeedback)="cancelFeedback($event)"
+                (onEditFeedback)="adjustLineWidgetHeight($event)"
             >
             </jhi-code-editor-tutor-assessment-inline-feedback>
         </div>
